--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+
+
+/**form section**/
 .section-1{
 
     background-color: rgb(171, 196, 207);   
@@ -38,3 +41,186 @@
   
 
 }
+
+/*......image div //***/  
+
+     .image{
+          background-color: rgb(68, 199, 17);
+          width: 30%;
+          height: 30%;
+          box-shadow: 1rem 1rem 1rem ;
+          border-radius:0.5rem;
+          justify-content: center;
+          align-items: center;
+          margin: 2px;
+          margin-right: 20px;
+
+        }
+
+        .images{
+          height: 20% ;
+          width: 29%;
+          box-shadow: 1rem 1rem 1rem ;
+          border-radius:0.5rem;
+          justify-content: center;
+          align-items: center;
+         margin: 0px 35px;
+         
+        }
+
+        .image-detel-text{
+           background-color: rgb(155, 203, 220);
+          font-size: 50px;
+          text-align: center;
+          color: rgb(255, 12, 150);
+          border-radius: 5px 3px;
+        }
+     /**small divice ***/
+@media screen and (max-width: 576px){
+        .section-1{
+          background-color: rgb(237, 208, 214);
+          box-shadow: 10px 10px 10px ;
+          align-items: center;
+          justify-content: center;
+          display: grid;
+          grid-template-columns: repeat(1, 2fr);
+        }
+        .h1{
+          background-color: darksalmon;
+          margin-left: 35rem;
+          margin-right: 35rem;
+          color: rgb(255, 0, 0);
+          
+        }
+      
+        .image-detel-text{
+          background-color: rgb(155, 203, 220);
+          font-size: 50px;
+          text-align: center;
+          color: rgb(255, 12, 150);
+          border-radius: 5px 3px;                
+        }
+        .image, .images {
+          background-color: rgb(68, 199, 17);
+          width: 100%;
+          height: 100%;
+          box-shadow: 1rem 1rem 1rem ;
+          border-radius:0.5rem;
+          margin: 5px 5px;
+         
+
+        }
+}
+
+
+
+   /* medium device ....*/
+@media screen and (min-width: 577px) and (max-width:992px){
+            .section-1{
+
+    background-color: rgb(171, 196, 207);   
+    margin: 20px;
+    border-radius: 0.5rem;
+    box-shadow: 1rem 1rem;
+   
+}
+.h1{
+    background-color: rgb(214, 116, 10);
+    text-align: center;
+   color: greenyellow;
+   margin-top: 2.5rem;
+   padding: 10px;
+   font-size: xx-large;
+}
+
+.email{
+    background-color: rgb(171, 196, 207);
+    margin: 3rem   35rem;
+    padding: 20px;
+  box-shadow: 1.5rem 1.5rem 6rem;
+
+}
+.password{
+       background-color: rgb(171, 196, 207);
+         margin: 3rem   35rem;
+    padding: 10px;
+  box-shadow: 1.5rem 1.5rem 6rem;
+
+}
+.submit{
+    background-color: rgb(171, 196, 207);
+    margin-left: 35rem;
+    margin-right: 35rem;
+    padding: 2px;
+  box-shadow: 1.5rem 1.5rem 6rem;
+  
+
+}
+
+/*......image div //***/  
+
+     .image{
+          background-color: rgb(68, 199, 17);
+          width: 20%;
+          height: 20%;
+          box-shadow: 1rem 1rem 1rem ;
+          border-radius:0.5rem;
+          justify-content: center;
+          align-items: center;
+          margin: 2px;
+          margin-right: 20px;
+
+        }
+
+        .images{
+          height: 20% ;
+          width: 29%;
+          box-shadow: 1rem 1rem 1rem ;
+          border-radius:0.5rem;
+          justify-content: center;
+          align-items: center;
+         margin: 0px 35px;
+         
+        }
+
+        .image-detel-text{
+           background-color: rgb(155, 203, 220);
+          font-size: 50px;
+          text-align: center;
+          color: rgb(255, 12, 150);
+          border-radius: 5px 3px;
+        }
+        .section-1{
+          background-color: rgb(237, 208, 214);
+          box-shadow: 10px 10px 10px ;
+          align-items: center;
+          justify-content: center;
+          display: grid;
+          grid-template-columns: repeat(1, 2fr);
+        }
+        .h1{
+          background-color: darksalmon;
+          margin-left: 35rem;
+          margin-right: 35rem;
+          color: rgb(255, 0, 0);
+          
+        }
+      
+        .image-detel-text{
+          background-color: rgb(155, 203, 220);
+          font-size: 50px;
+          text-align: center;
+          color: rgb(255, 12, 150);
+          border-radius: 5px 3px;                
+        }
+        .image, .images {
+          background-color: rgb(68, 199, 17);
+          width: 100%;
+          height: 100%;
+          box-shadow: 1rem 1rem 1rem ;
+          border-radius:0.5rem;
+          margin: 5px 5px;
+         
+
+        }
+      }
